src/test/ui/generic-associated-types/cross-crate-bounds.stderr
error[E0277]: the trait bound `(): AsRef<()>` is not satisfied
  --> $DIR/cross-crate-bounds.rs:15:16
   |
LL |     type Bar = ();
   |                ^^ the trait `AsRef<()>` is not implemented for `()`
   |
note: required by a bound in `foo_defn::Foo::Bar`
  --> $DIR/auxiliary/foo_defn.rs:4:15
   |
LL |     type Bar: AsRef<()>;
   |               ^^^^^^^^^ required by this bound in `foo_defn::Foo::Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
